--- a/src/app/modules/order/order-list/order-list.component.html
+++ b/src/app/modules/order/order-list/order-list.component.html
@@ -180,7 +180,7 @@
                     <small class="p-error" *ngIf="submitted && orderForm.get('shippingAddress.city')?.invalid">City
                         is required</small>
                 </div>
-                <div class="field">
+                <!-- <div class="field">
                     <label for="state">State/Province</label>
                     <input id="state" pInputText formControlName="state"
                         [class.p-invalid]="submitted && orderForm.get('shippingAddress.state')?.invalid">
@@ -194,7 +194,7 @@
                     <small class="p-error" *ngIf="submitted && orderForm.get('shippingAddress.zipCode')?.invalid">ZIP
                         code is
                         required</small>
-                </div>
+                </div> -->
                 <div class="field col-12">
                     <label for="country">Country</label>
                     <p-dropdown id="country" [options]="countryOptions" formControlName="country" optionLabel="label"
@@ -214,20 +214,23 @@
                 (click)="addItem()"></button>
         </div>
 
-        <p-table [value]="items.controls" [scrollable]="true" scrollHeight="300px">
+        <p-table [value]="items.controls" [scrollable]="true" scrollHeight="600px"
+            columnResizeMode="fit" [rowHover]="true" [resizableColumns]="true">
             <ng-template pTemplate="header">
                 <tr>
-                    <th style="width: 40%">Product</th>
-                    <th style="width: 15%">Price</th>
-                    <th style="width: 15%">Quantity</th>
-                    <th style="width: 20%">Total</th>
-                    <th style="width: 10%">Discount</th>
-                    <th style="width: 5%"></th>
+                    <th>Product</th>
+                    <th>Color</th>
+                    <th>Size</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Discount</th>
+                    <th>Total</th>
+                    <th></th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-item let-rowIndex="rowIndex">
                 <tr [formGroup]="item">
-                    <td class="w-full">
+                    <td class="w-28 p-0">
                         <p-dropdown formControlName="productId" 
                             [options]="products()" 
                             appendTo="body"
@@ -241,7 +244,27 @@
                             (onChange)="onProductChange($event,rowIndex)">
                         </p-dropdown>
                     </td>
-                    <td>
+                    <td class="w-28 p-0">
+                        <p-dropdown formControlName="color" 
+                            [options]="item.get('listColors')?.value" 
+                            appendTo="body"
+                            placeholder="Select Color" 
+                            styleClass="w-full"
+                            [class.p-invalid]="submitted && item.get('color')?.invalid"
+                            (onChange)="onColorChange($event,rowIndex)">
+                        </p-dropdown>
+                    </td>
+                    <td class="w-28 p-0">
+                        <p-dropdown formControlName="size" 
+                            [options]="item.get('listSizes')?.value" 
+                            appendTo="body"
+                            placeholder="Select Size" 
+                            styleClass="w-full"
+                            [class.p-invalid]="submitted && item.get('size')?.invalid"
+                            (onChange)="onSizeChange($event,rowIndex)">
+                        </p-dropdown>
+                    </td>
+                    <td class="w-28 p-0">
                         <p-inputNumber mode="currency" 
                             currency="USD" 
                             locale="en-US" 
@@ -250,23 +273,14 @@
                             class="w-full">
                         </p-inputNumber>
                     </td>
-                    <td>
+                    <td class="w-28 p-0">
                         <p-inputNumber formControlName="quantity" 
                             [min]="1" 
                             (onInput)="calculateTotal()" 
                             class="w-full">
                         </p-inputNumber>
                     </td>
-                    <td>
-                        <p-inputNumber mode="currency" 
-                            currency="USD" 
-                            locale="en-US" 
-                            formControlName="totalPrice"
-                            [readonly]="true" 
-                            class="w-full">
-                        </p-inputNumber>
-                    </td>
-                    <td>
+                    <td class="w-28 p-0">
                         <p-inputNumber mode="currency" 
                             currency="USD" 
                             locale="en-US" 
@@ -275,7 +289,16 @@
                             class="w-full">
                         </p-inputNumber>
                     </td>
-                    <td class="text-center">
+                    <td class="w-28 p-0">
+                        <p-inputNumber mode="currency" 
+                            currency="USD" 
+                            locale="en-US" 
+                            formControlName="totalPrice"
+                            [readonly]="true" 
+                            class="w-full">
+                        </p-inputNumber>
+                    </td>
+                    <td style="width: 50px" class="text-center">
                         <button type="button" pButton pRipple icon="pi pi-trash"
                             class="p-button-rounded p-button-text p-button-danger p-button-sm" (click)="removeItem(rowIndex)">
                         </button>
@@ -284,24 +307,53 @@
             </ng-template>
             <ng-template pTemplate="footer">
                 <tr>
-                    <td colspan="3" class="text-right font-bold">Subtotal:</td>
+                    <td colspan="6" class="text-right font-bold">Subtotal:</td>
                     <td colspan="2">{{ orderForm.get('subtotal')?.value | currency:'USD':'symbol':'1.2-2' }}
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="text-right font-bold">Tax:</td>
+                    <td colspan="6" class="text-right font-bold">Tax:</td>
                     <td colspan="2">{{ orderForm.get('tax')?.value | currency:'USD':'symbol':'1.2-2' }}</td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="text-right font-bold">Shipping:</td>
+                    <td colspan="6" class="text-right font-bold">Shipping:</td>
                     <td colspan="2">{{ orderForm.get('shippingCost')?.value | currency:'USD':'symbol':'1.2-2' }}
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="text-right font-bold text-xl">Total:</td>
+                    <td colspan="6" class="text-right font-bold text-xl">Total:</td>
                     <td colspan="2" class="text-xl">{{ orderForm.get('total')?.value |
                         currency:'USD':'symbol':'1.2-2' }}</td>
                 </tr>
+                <!-- cashPayment -->
+                 @if (isEditOrder) {
+                 <ng-container [formGroup]="cashPayment">
+                <tr>
+                    <td colspan="6" class="text-right font-bold text-xl !bg-green-500">Cash Payment:</td>
+                    <td colspan="2" class="text-xl !bg-green-500">
+                        <p-inputNumber mode="currency" 
+                            currency="USD" 
+                            locale="en-US" 
+                            formControlName="amountPaid"
+                            (onInput)="calculateChangeDue()"
+                            class="w-full">
+                        </p-inputNumber>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6" class="text-right font-bold text-xl !bg-yellow-500">Change Due:</td>
+                    <td colspan="2" class="text-xl !bg-yellow-500">
+                        <p-inputNumber mode="currency" 
+                            currency="USD" 
+                            locale="en-US" 
+                            formControlName="changeDue"
+                            [readonly]="true"
+                            class="w-full">
+                        </p-inputNumber>
+                    </td>
+                </tr>
+                </ng-container>
+            }
             </ng-template>
         </p-table>
 
