--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -32,7 +32,7 @@
             <th>Image</th>
             <th pSortableColumn="price">Price <p-sortIcon field="price"></p-sortIcon></th>
             <th pSortableColumn="category">Category <p-sortIcon field="category"></p-sortIcon></th>
-            <th>Reviews</th>
+            <!-- <th>Reviews</th> -->
             <th pSortableColumn="status">Status <p-sortIcon field="status"></p-sortIcon></th>
             <th></th>
         </tr>
@@ -44,7 +44,7 @@
                 <span class="font-medium">{{ product.name }}</span>
             </td>
             <td style="width:14%; min-width: 10rem;">
-                <img [src]="'http://localhost:3000/'+product.images?.[0].filePath" [alt]="product.name" width="64"
+                <img [src]="'https://nasig-backend-sigma.vercel.app/'+product.images?.[0].filePath" [alt]="product.name" width="64"
                     height="64" class="shadow-4 border-round" [fallback]="'/images/picture.png'" />
             </td>
             <td style="width:14%; min-width:8rem;">
@@ -53,9 +53,9 @@
             <td style="width:14%; min-width:10rem;">
                 {{ product.category.name }}
             </td>
-            <td style="width:14%; min-width: 10rem;">
+            <!-- <td style="width:14%; min-width: 10rem;">
                 <p-rating [ngModel]="product.rating" [readonly]="true"></p-rating>
-            </td>
+            </td> -->
             <td style="width:14%; min-width: 10rem;">
                 <p-tag [value]="product.status" [severity]="getSeverity(product.status)"></p-tag>
             </td>
