Refactor API URLs to use localhost for development and update image paths in brand, category, product, and upload file components.

--- a/src/app/modules/category/catgory-list/catgory-list.component.html
+++ b/src/app/modules/category/catgory-list/catgory-list.component.html
@@ -44,7 +44,7 @@
                 <ng-template pTemplate="body" let-category>
                     <tr>
                         <td>
-                            <img [src]="'https://nasig-backend-sigma.vercel.app/'+category.image.filePath" [fallback]="'/images/picture.png'" [alt]="category.name" class="w-10 h-10 object-cover">
+                            <img [src]="category.image.filePath" [fallback]="'/images/picture.png'" [alt]="category.name" class="w-10 h-10 object-cover">
                         </td>
                         <td>
                             <span class="font-medium">{{category.name}}</span>
