--- a/src/app/modules/brand/brand-list/brand-list.component.html
+++ b/src/app/modules/brand/brand-list/brand-list.component.html
@@ -55,7 +55,7 @@
                 <td>{{ brand.name }}</td>
                 <td>{{ brand.slug }}</td>
                 <td>
-                    <img [src]="'https://nasig-backend-sigma.vercel.app/'+brand.logo.filePath" [fallback]="'/images/picture.png'" [alt]="brand.name"
+                    <img [src]="brand.logo.filePath" [fallback]="'/images/picture.png'" [alt]="brand.name"
                         class="shadow-2 w-10 h-10 object-cover" />
                 </td>
                 <td>
