--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -44,7 +44,7 @@
                 <span class="font-medium">{{ product.name }}</span>
             </td>
             <td style="width:14%; min-width: 10rem;">
-                <img [src]="'https://nasig-backend-sigma.vercel.app/'+product.images?.[0].filePath" [alt]="product.name" width="64"
+                <img [src]="product.images?.[0].filePath" [alt]="product.name" width="64"
                     height="64" class="shadow-4 border-round" [fallback]="'/images/picture.png'" />
             </td>
             <td style="width:14%; min-width:8rem;">
